@@ -67,7 +67,7 @@ public class Principal {
         listaDeFilmes.add(meuFilme);
         listaDeFilmes.add(meuFilme);
         System.out.println("Tamanho da lista " + listaDeFilmes.size());
-        System.out.println("Primeio filme " + listaDeFilmes.get(0).getNome());
+        System.out.println("Primeio filme " + listaDeFilmes.getFirst().getNome());
 
     }
 }
